--- a/index.html
+++ b/index.html
@@ -23,34 +23,75 @@
   <!-- Hero Section -->
   <section id="home" class="hero">
     <div class="hero-content">
+      <img src="assets/profile.jpg" alt="Philip G. Johnson" class="profile-pic" />
       <h1>Philip G. Johnson</h1>
-      <p>Embedded Systems | Robotics | AI Applications</p>
+      <p class="tagline">Turning complex hardware into elegant, intelligent systems.</p>
+      <p class="subheading">ECE Master's @ University of Utah | SCADA, Embedded Systems, AI, Machine Learning, Robotics, SoC Design | Let's build the future.</p>
     </div>
   </section>
+  
 
-  <!-- About Section -->
   <section id="about" class="section">
     <h2>About Me</h2>
     <p>
-      I’m a product engineer with a background in embedded systems, AI-powered applications, and robotics. I enjoy building systems that bridge hardware and intelligence, from FPGA-based SoC design to real-time UAV control.
+      I’m an engineer driven by impact and innovation. With hands-on experience across embedded systems, SCADA, AI-based signal processing, and SoC design, I specialize in bridging hardware and intelligence.
+      <br /><br />
+      Whether prototyping autonomous UAVs, building Modbus-integrated automation, or optimizing FPGA pipelines, I thrive at the intersection of software precision and hardware performance.
+      <br /><br />
+      Currently pursuing my Master’s in Electrical and Computer Engineering at the University of Utah, I’m ready to tackle complex problems, lead forward-thinking teams, and shape the future of embedded intelligence.
     </p>
   </section>
+  
 
   <!-- Projects Section -->
   <section id="projects" class="section">
-    <h2>Featured Projects</h2>
+    <h2>Projects</h2>
+
+    <h3>Embedded & Hardware Systems</h3>
     <div class="project-grid">
       <div class="project-card">
-        <h3>AI-Generated Image Detection</h3>
-        <p>Built with PyTorch, ResNet18 & Vision Transformer. >90% validation accuracy detecting synthetic images.</p>
+        <h4>Autonomous UAV Prototyping</h4>
+        <p>Designed IPC-compliant drones with CAN/IMU/GPS. Improved flight stability by 20% through custom drivers and controllers.</p>
       </div>
       <div class="project-card">
-        <h3>Autonomous UAV Prototyping</h3>
-        <p>Designed IPC-compliant drones with CAN/IMU/GPS. Improved stability by 20%.</p>
+        <h4>FPGA-Based Pong Game SoC</h4>
+        <p>Developed a real-time Pong game in Verilog on FPGA with VGA interface using ModelSim, Cadence, and Innovus.</p>
       </div>
       <div class="project-card">
-        <h3>FPGA-Based Pong Game SoC</h3>
-        <p>Developed a real-time Pong game in Verilog on FPGA with VGA interface.</p>
+        <h4>Industrial SCADA with Modbus</h4>
+        <p>Built factory automation using AdvancedHMI, Modbus, and Ladder Logic. Enabled real-time diagnostics and sensor integration.</p>
+      </div>
+      <div class="project-card">
+        <h4>Swarm Robotics with ROS & Vision</h4>
+        <p>Implemented distributed robotic agents with ROS, OpenCV, and XBee. Achieved 25% improvement in coordination reliability.</p>
+      </div>
+      <div class="project-card">
+        <h4>Neuroprosthetics Force Feedback</h4>
+        <p>Translated piezo sensor force into electrical stimulation using Arduino and MATLAB. Achieved 81% blind discrimination accuracy.</p>
+      </div>
+    </div>
+
+    <h3>AI & Robotics</h3>
+    <div class="project-grid">
+      <div class="project-card">
+        <h4>AI-Generated Image Detection</h4>
+        <p>Built models (ResNet18, ViT, CNN) with >90% validation accuracy to classify synthetic images using PyTorch and image benchmarks.</p>
+      </div>
+      <div class="project-card">
+        <h4>UR5 Arm Motion Planning</h4>
+        <p>Used ROS, Gazebo, MoveIt! to simulate inverse kinematics and plan trajectories in a real-time manipulation test environment.</p>
+      </div>
+    </div>
+
+    <h3>Web & Full-Stack Systems</h3>
+    <div class="project-grid">
+      <div class="project-card">
+        <h4>Event Ticketing System</h4>
+        <p>Built a full-stack booking platform with Flask, React, and Razorpay. Enabled 800+ transactions with real-time seat selection.</p>
+      </div>
+      <div class="project-card">
+        <h4>Role-Based Leave Management</h4>
+        <p>Developed C# + .NET app with LINQ and SQL Server for workflow automation. Reduced manual effort by 50%, improved query speed 30%.</p>
       </div>
     </div>
   </section>
@@ -65,7 +106,8 @@
   <section id="contact" class="section">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:philipgabriel21@gmail.com">philipgabriel21@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/phiriel" target="_blank">phiriel</a></p>
+    <p>Phone: <a href="tel:+18015051214">+1 (801) 505-1214</a></p>
+    <p>GitHub: <a href="https://github.com/phiriel" target="_blank">Philip_Gabriel</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/philip-gabriel7" target="_blank">philip-gabriel7</a></p>
   </section>
 </body>
